syntax = "proto3";

package users;

option java_multiple_files = true;
option java_package = "com.careerseekers.grpc.users";
option java_outer_classname = "UsersServiceProto";

import "google/protobuf/timestamp.proto";

service UsersService {
  rpc GetById (UserId) returns (User);
  rpc GetChildWithUser (ChildId) returns (ChildWithUser);
}

message UserId {
  int64 id = 1;
}

message ChildId {
  int64 id = 1;
}

message User {
  int64 id = 1;
  string firstName = 2;
  string lastName = 3;
  string patronymic = 4;
  google.protobuf.Timestamp dateOfBirth = 5;
  string email = 6;
  string mobileNumber = 7;
  string password = 8;
  string role = 9;
  int64 avatarId = 10;
  bool verified = 11;
  bool isMentor = 12;
}

message ChildWithUser {
  int64 id = 1;
  string lastName = 2;
  string firstName = 3;
  string patronymic = 4;
  google.protobuf.Timestamp dateOfBirth = 5;
  User user = 6;
}